--- a/index.html
+++ b/index.html
@@ -3,50 +3,90 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Workout Tracker</title>
+  <title>🏋️ FitFusion - Workout Tracker</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f7f9fc;
       margin: 0;
-      padding: 0;
+      font-family: 'Open Sans', sans-serif;
+      background: linear-gradient(135deg, #e2e8f0, #edf2f7);
+      color: #2d3748;
     }
+
     header {
-      background: #2d3748;
+      background: #1a202c;
       color: white;
-      padding: 20px;
       text-align: center;
+      padding: 30px 20px;
     }
+
+    header h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
     nav {
-      background: #4a5568;
+      background: #2d3748;
       display: flex;
       justify-content: center;
-      gap: 20px;
-      padding: 10px 0;
+      gap: 30px;
+      padding: 15px 0;
     }
+
     nav a {
-      color: white;
-      text-decoration: none;
+      color: #f7fafc;
       font-weight: bold;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: color 0.3s ease;
     }
+
     nav a:hover {
-      text-decoration: underline;
+      color: #63b3ed;
     }
+
     main {
-      max-width: 800px;
+      max-width: 1000px;
       margin: 40px auto;
       padding: 0 20px;
     }
+
     .section {
       background: white;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
     }
+
     .section h2 {
       margin-top: 0;
+      font-size: 1.8em;
+      border-bottom: 2px solid #63b3ed;
+      padding-bottom: 10px;
+      color: #2b6cb0;
     }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
+
+    .gallery img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
+
     footer {
       text-align: center;
       padding: 20px;
@@ -56,14 +96,14 @@
   </style>
 </head>
 <body>
+
   <header>
-    <h1>🏋️FitFusion🏋</h1>
-    <p>Track your fitness journey and stay motivated!</p>
+    <h1>🏋️ FitFusion</h1>
+    <p>Your Personal Fitness Tracker & Motivator</p>
   </header>
 
   <nav>
-    <a href="workoutSetup.html">Log Workout</a>
-    <a href="fatPorcentage.html">Calculate fat %</a>
+    <a href="fatPorcentage.html">Calculate Fat %</a>
     <a href="https://www.nutrition.gov/topics/exercise-and-fitness">Resources</a>
     <a href="https://www.fitnessblender.com/" target="_blank">Fitness Blender</a>
   </nav>
@@ -71,46 +111,23 @@
   <main>
     <div class="section">
       <h2>Welcome to FitFusion!</h2>
-      <p>Start tracking your workouts to monitor your progress and achieve your fitness goals.</p>
+      <p>Whether you're lifting, running, or stretching — FitFusion is your guide to crushing your fitness goals. Stay inspired and be your best self!</p>
     </div>
 
-<!--
     <div class="section">
-      <h2>Quick Links</h2>
-      <ul>
-        <li><a href="index.html">Log a New Workout</a></li>
-        <li><a href="progress.html">View Your Progress</a></li>
-        <li><a href="https://www.nutrition.gov/topics/exercise-and-fitness">Fitness Resources</a></li>
-      </ul>
-    </div> -->
-	
+      <h2>Fuel Your Motivation 💥</h2>
+      <div class="gallery">
+        <img src="https://mir-s3-cdn-cf.behance.net/projects/404/6560e8207844559.Y3JvcCwzNTA4LDI3NDMsMCwxMTEx.png" alt="Strength Training">
+        <img src="https://kajabi-storefronts-production.kajabi-cdn.com/kajabi-storefronts-production/file-uploads/blogs/2147506871/images/2808d8-b643-4a84-3140-01fa7828d03_Arnold-Schwarzenegger-photo-Arnold-Gym-by-official-website.png.webp" alt="Running Motivation">
+        <img src="https://i.pinimg.com/474x/0b/44/1c/0b441c810039cd890e0306c72f810a00.jpg" alt="HIIT Workout">
+        
+      </div>
+    </div>
   </main>
 
   <footer>
-    &copy; 2025 Workout Tracker. All rights reserved.
+    &copy; 2025 FitFusion. Stay strong, stay consistent.
   </footer>
-  
-  <script>
-  
-  document.getElementById('yourWorkoutFormID').addEventListener('submit', async (e) => {
-  e.preventDefault();
 
-  const workoutData = {
-    type: document.getElementById('workoutType').value,
-    duration: document.getElementById('duration').value,
-    calories: document.getElementById('calories').value,
-  };
-
-  const res = await fetch('http://localhost:3000/api/workouts', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify(workoutData)
-  });
-
-  const result = await res.json();
-  alert(result.message);
-});
-
-  </script> 
 </body>
 </html>
