--- a/index.html
+++ b/index.html
@@ -9,45 +9,52 @@
     body {
       margin: 0;
       font-family: 'Open Sans', sans-serif;
-      background: linear-gradient(135deg, #e2e8f0, #edf2f7);
+      background: #f7fafc;
       color: #2d3748;
     }
 
     header {
-      background: #1a202c;
+      background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS46AkBewxdsspIaIG9JaO3aC5H2Xh3GjxW_Q&s') center/cover no-repeat;
       color: white;
       text-align: center;
-      padding: 30px 20px;
+      padding: 80px 20px;
     }
 
     header h1 {
       font-family: 'Orbitron', sans-serif;
-      font-size: 2.5em;
+      font-size: 3em;
       margin-bottom: 10px;
     }
 
-    nav {
-      background: #2d3748;
+    header p {
+      font-size: 1.2em;
+      margin-bottom: 20px;
+    }
+
+    .cta-buttons {
       display: flex;
       justify-content: center;
-      gap: 30px;
-      padding: 15px 0;
+      gap: 15px;
+      margin-top: 20px;
     }
 
-    nav a {
-      color: #f7fafc;
+    .cta-buttons button {
+      background-color: #3182ce;
+      border: none;
+      padding: 12px 24px;
+      color: white;
       font-weight: bold;
-      text-decoration: none;
-      text-transform: uppercase;
-      transition: color 0.3s ease;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s ease;
     }
 
-    nav a:hover {
-      color: #63b3ed;
+    .cta-buttons button:hover {
+      background-color: #2b6cb0;
     }
 
     main {
-      max-width: 1000px;
+      max-width: 1200px;
       margin: 40px auto;
       padding: 0 20px;
     }
@@ -56,21 +63,39 @@
       background: white;
       padding: 30px;
       border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
       margin-bottom: 30px;
     }
 
     .section h2 {
       margin-top: 0;
       font-size: 1.8em;
+      color: #2b6cb0;
       border-bottom: 2px solid #63b3ed;
       padding-bottom: 10px;
-      color: #2b6cb0;
+    }
+
+    .features-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .feature-card {
+      background: #edf2f7;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .feature-card h3 {
+      margin: 10px 0 5px;
     }
 
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 20px;
     }
 
@@ -79,12 +104,43 @@
       height: 220px;
       object-fit: cover;
       border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       transition: transform 0.3s ease;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
 
     .gallery img:hover {
       transform: scale(1.05);
+    }
+
+    .reviews {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .review-card {
+      flex: 1 1 300px;
+      background: #fefefe;
+      border-left: 5px solid #63b3ed;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.07);
+    }
+
+    .review-card p {
+      font-style: italic;
+      margin: 0;
+    }
+
+    .review-card .author {
+      margin-top: 10px;
+      font-weight: bold;
+      color: #2b6cb0;
+    }
+
+    .stars {
+      color: gold;
+      margin-top: 5px;
     }
 
     footer {
@@ -98,31 +154,94 @@
 <body>
 
   <header>
-    <h1>🏋️ FitFusion</h1>
-    <p>Your Personal Fitness Tracker & Motivator</p>
+    <h1>Welcome to FitFusion!</h1>
+    <p>Track your progress, crush your goals, and transform your body with our state-of-the-art fitness platform.</p>
+    <div class="cta-buttons">
+	  <button onclick="location.href='workoutSetup.html'">Log Workout</button>
+      <button onclick="location.href='fatPorcentage.html'">Calculate Fat %</button>
+    </div>
   </header>
 
-  <nav>
-    <a href="fatPorcentage.html">Calculate Fat %</a>
-    <a href="https://www.nutrition.gov/topics/exercise-and-fitness">Resources</a>
-    <a href="https://www.fitnessblender.com/" target="_blank">Fitness Blender</a>
-  </nav>
-
   <main>
+
     <div class="section">
-      <h2>Welcome to FitFusion!</h2>
-      <p>Whether you're lifting, running, or stretching — FitFusion is your guide to crushing your fitness goals. Stay inspired and be your best self!</p>
+      <h2>What Sets Us Apart 🔥</h2>
+      <div class="features-grid">
+        <div class="feature-card">
+          <h3>📈 Track Progress</h3>
+          <p>Monitor your workouts, set goals, and watch yourself improve day by day.</p>
+        </div>
+        <div class="feature-card">
+          <h3>📊 Analytics</h3>
+          <p>Get detailed insights into your performance metrics and body composition.</p>
+        </div>
+        <div class="feature-card">
+          <h3>👥 Community</h3>
+          <p>Join a supportive community of fitness enthusiasts to stay motivated.</p>
+        </div>
+        <div class="feature-card">
+          <h3>📱 Mobile Ready</h3>
+          <p>Access your fitness data anytime, anywhere from any device.</p>
+        </div>
+      </div>
     </div>
 
     <div class="section">
-      <h2>Fuel Your Motivation 💥</h2>
+      <h2>Fuel Your Motivation ✴️</h2>
       <div class="gallery">
         <img src="https://mir-s3-cdn-cf.behance.net/projects/404/6560e8207844559.Y3JvcCwzNTA4LDI3NDMsMCwxMTEx.png" alt="Strength Training">
         <img src="https://kajabi-storefronts-production.kajabi-cdn.com/kajabi-storefronts-production/file-uploads/blogs/2147506871/images/2808d8-b643-4a84-3140-01fa7828d03_Arnold-Schwarzenegger-photo-Arnold-Gym-by-official-website.png.webp" alt="Running Motivation">
         <img src="https://i.pinimg.com/474x/0b/44/1c/0b441c810039cd890e0306c72f810a00.jpg" alt="HIIT Workout">
-        
+        <img src="https://media.tenor.com/IGi1JdHwtJsAAAAM/pumped-workout.gif" alt="Female Workout">
       </div>
     </div>
+
+    <div class="section">
+      <h2>Success Stories ❣️</h2>
+      <div class="reviews">
+        <div class="review-card">
+          <p>"FitFusion helped me lose 30 pounds and build the strength I never thought I'd have. The tracking features keep me accountable every day."</p>
+          <div class="author">Michael K.</div>
+          <div class="stars">⭐⭐⭐⭐⭐</div>
+        </div>
+        <div class="review-card">
+          <p>"The body fat calculator is incredibly accurate. I've been using it to track my cutting phase and the results align perfectly with my DEXA scans!"</p>
+          <div class="author">Sarah T.</div>
+          <div class="stars">⭐⭐⭐⭐⭐</div>
+        </div>
+      </div>
+    </div>
+	
+	<button onclick = getData()> 
+	button 
+	
+	</button> 
+	<p id = "dummy"> 
+	</p>
+	
+	<script> 
+	async function getData() {
+  const url = " http://localhost:3000/api";
+  try {
+    const response = await fetch(url);
+    if (!response.ok) {
+      throw new Error(`Response status: ${response.status}`);
+    }
+
+    const json = await response.json();
+	const a = document.getElementById("dummy")
+	a.innerHTML = json.title; 
+	a.innerHTML = json.userId; 
+	
+    console.log(json);
+  } catch (error) {
+    console.error(error.message);
+  }
+}
+	</script> 
+
+
+
   </main>
 
   <footer>
