--- a/index.html
+++ b/index.html
@@ -76,22 +76,59 @@
     }
 
     .features-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+  }
 
-    .feature-card {
-      background: #edf2f7;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-    }
+  .feature-card {
+    flex: 1 1 200px;
+    background: white;
+    border-radius: 10px;
+    padding: 25px 20px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+    text-align: center;
+    border: 1.5px solid #e2e8f0;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  }
 
-    .feature-card h3 {
-      margin: 10px 0 5px;
-    }
+  .feature-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.08);
+  }
+
+  .feature-card h3 {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 1.2em;
+    color: #1a202c;
+    margin-bottom: 10px;
+  }
+
+  .feature-card p {
+    font-size: 0.95em;
+    color: #4a5568;
+  }
+
+  .section h2 {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 2em;
+    margin-bottom: 10px;
+    color: #1a202c;
+    display: flex;
+    align-items: center;
+  }
+
+  .section h2::after {
+    content: '';
+    flex-grow: 1;
+    height: 3px;
+    background: #e53e3e;
+    margin-left: 10px;
+    border-radius: 3px;
+    max-width: 120px;
+  }
 
     .gallery {
       display: grid;
@@ -118,13 +155,19 @@
       gap: 20px;
     }
 
-    .review-card {
-      flex: 1 1 300px;
+	.review-card {
+	  flex: 1 1 300px;
       background: #fefefe;
       border-left: 5px solid #63b3ed;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 3px 6px rgba(0,0,0,0.07);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+      .review-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.1);
     }
 
     .review-card p {
@@ -159,6 +202,8 @@
     <div class="cta-buttons">
 	  <button onclick="location.href='workoutSetup.html'">Log Workout</button>
       <button onclick="location.href='fatPorcentage.html'">Calculate Fat %</button>
+	  <button onclick="location.href='https://www.nutrition.gov/topics/exercise-and-fitness'">Resources</button>
+	  
     </div>
   </header>
 
@@ -220,8 +265,9 @@
 	</p>
 	
 	<script> 
+	
 	async function getData() {
-  const url = " http://localhost:3000/api";
+  const url = "https://jsonplaceholder.typicode.com/todos/1";
   try {
     const response = await fetch(url);
     if (!response.ok) {
@@ -238,6 +284,7 @@
     console.error(error.message);
   }
 }
+
 	</script> 
 
 
