--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 	<script> 
 	
 	async function getData() {
-  const url = "https://jsonplaceholder.typicode.com/todos/1";
+  const url = "https://backend-1-6j4p.onrender.com/todos/1";
   try {
     const response = await fetch(url);
     if (!response.ok) {
