--- a/index.html
+++ b/index.html
@@ -267,22 +267,23 @@
 	<script> 
 	
 	async function getData() {
-  const url = "https://backend-1-6j4p.onrender.com/todos/1";
-  try {
-    const response = await fetch(url);
-    if (!response.ok) {
-      throw new Error(`Response status: ${response.status}`);
-    }
+    const url = "https://backend-1-6j4p.onrender.com/todos/1"; 
+    try {
+        const response = await fetch(url);
+        if (!response.ok) {
+            throw new Error(`Response status: ${response.status}`);
+        }
 
-    const json = await response.json();
-	const a = document.getElementById("dummy")
-	a.innerHTML = json.title; 
-	a.innerHTML = json.userId; 
-	
-    console.log(json);
-  } catch (error) {
-    console.error(error.message);
-  }
+        const json = await response.json();
+        const a = document.getElementById("dummy");
+
+        // Display both title and userId
+        a.innerHTML = `Title: ${json.title} <br> User ID: ${json.userId}`;
+        
+        console.log(json);
+    } catch (error) {
+        console.error("Error:", error.message);
+    }
 }
 
 	</script> 
