--- a/index.html
+++ b/index.html
@@ -283,10 +283,14 @@
           <h3>📊 Analytics</h3>
           <p>Get detailed insights into your performance metrics and body composition.</p>
         </div>
-        <div class="feature-card">
-          <h3>👥 Community</h3>
-          <p>Join a supportive community of fitness enthusiasts to stay motivated.</p>
-        </div>
+            <div class="feature-card">
+  <h3>
+    <a href="https://www.reddit.com/r/Fitness/?rdt=52406" target="_blank" style="text-decoration: none; color: inherit;">
+      👥 Community
+    </a>
+  </h3>
+  <p>Join a supportive community of fitness enthusiasts to stay motivated.</p>
+</div>
         <div class="feature-card">
           <h3>📱 Mobile Ready</h3>
           <p>Access your fitness data anytime, anywhere from any device.</p>
