--- a/fatPorcentage.html
+++ b/fatPorcentage.html
@@ -34,7 +34,7 @@
     }
 
     .container {
-      max-width: 600px;
+      max-width: 1100px;
       margin: auto;
       background: white;
       padding: 30px;
@@ -86,44 +86,89 @@
       background-color: #0056b3;
     }
 
-    .result-card {
-      margin-top: 30px;
-      background: linear-gradient(135deg, #e0f7fa, #f1f8e9);
-      border-radius: 15px;
-      padding: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    .form-result-wrapper {
+      display: flex;
+      gap: 30px;
+      margin-top: 20px;
+      align-items: flex-start;
+      flex-wrap: wrap;
+    }
+
+    #bfForm {
+      flex: 1;
+      min-width: 280px;
+    }
+
+    #result {
+      flex: 1;
+      min-width: 280px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+    }
+
+    .saturn-ring {
+      position: relative;
+      width: 200px;
+      height: 150px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      animation: float 3s ease-in-out infinite alternate;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0); }
+      100% { transform: translateY(-10px); }
+    }
+
+    .ring-value {
+      font-size: 28px;
+      font-weight: bold;
+      position: absolute;
+      z-index: 1;
+    }
+
+    .ring-label {
+      font-size: 16px;
+      margin-top: 40px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .ring-description {
+      position: absolute;
+      bottom: 5px;
+      font-size: 12px;
+      color: #666;
       text-align: center;
+      width: 100%;
+    }
+
+    .result-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
       animation: fadeIn 1s ease-in-out;
-    }
-
-    .result-card h2 {
-      margin-bottom: 10px;
-      color: #2c3e50;
-    }
-
-    .metric {
-      margin-top: 15px;
-      font-size: 18px;
-    }
-
-    .bar-container {
-      background-color: #e0e0e0;
-      border-radius: 20px;
-      overflow: hidden;
-      height: 20px;
-      margin-top: 5px;
-    }
-
-    .bar {
-      height: 100%;
-      background-color: #4caf50;
-      transition: width 1s ease-in-out;
     }
 
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
+    svg {
+      transform: rotate(-90deg);
+      position: absolute;
+    }
+
+    circle {
+      transition: stroke-dashoffset 1.2s ease-out;
+    }
+
   </style>
 </head>
 <body>
@@ -141,42 +186,44 @@
 
   <div class="container">
     <h1>Body Fat Calculator</h1>
-    <form id="bfForm">
-      <label for="gender">Gender:</label>
-      <select id="gender" required>
-        <option value="">Select Gender</option>
-        <option value="male">Male</option>
-        <option value="female">Female</option>
-      </select>
+    <div class="form-result-wrapper">
+      <form id="bfForm">
+        <label for="gender">Gender:</label>
+        <select id="gender" required>
+          <option value="">Select Gender</option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+        </select>
 
-      <label for="age">Age (years):</label>
-      <input type="number" id="age" min="1" required />
+        <label for="age">Age (years):</label>
+        <input type="number" id="age" min="1" required />
 
-      <label>Height:</label>
-      <div class="flex-inputs">
-        <input type="number" id="heightFeet" placeholder="Feet" min="0" required />
-        <input type="number" id="heightInches" placeholder="Inches" min="0" max="11" required />
-      </div>
+        <label>Height:</label>
+        <div class="flex-inputs">
+          <input type="number" id="heightFeet" placeholder="Feet" min="0" required />
+          <input type="number" id="heightInches" placeholder="Inches" min="0" max="11" required />
+        </div>
 
-      <label>Neck Circumference:</label>
-      <div class="flex-inputs">
-        <input type="number" id="neckFeet" placeholder="Feet" min="0" required />
-        <input type="number" id="neckInches" placeholder="Inches" min="0" max="11" required />
-      </div>
+        <label>Neck Circumference:</label>
+        <div class="flex-inputs">
+          <input type="number" id="neckFeet" placeholder="Feet" min="0" required />
+          <input type="number" id="neckInches" placeholder="Inches" min="0" max="11" required />
+        </div>
 
-      <label>Waist Circumference:</label>
-      <div class="flex-inputs">
-        <input type="number" id="waistFeet" placeholder="Feet" min="0" required />
-        <input type="number" id="waistInches" placeholder="Inches" min="0" max="11" required />
-      </div>
+        <label>Waist Circumference:</label>
+        <div class="flex-inputs">
+          <input type="number" id="waistFeet" placeholder="Feet" min="0" required />
+          <input type="number" id="waistInches" placeholder="Inches" min="0" max="11" required />
+        </div>
 
-      <label for="weight">Weight (kg):</label>
-      <input type="number" id="weight" min="1" step="0.1" required />
+        <label for="weight">Weight (kg):</label>
+        <input type="number" id="weight" min="1" step="0.1" required />
 
-      <button type="submit">Calculate Body Fat %</button>
-    </form>
+        <button type="submit">Calculate Body Fat %</button>
+      </form>
 
-    <div id="result"></div>
+      <div id="result"></div>
+    </div>
   </div>
 
   <script>
@@ -213,37 +260,95 @@
         return;
       }
 
-      bodyFat = bodyFat.toFixed(2);
+      bodyFat = parseFloat(bodyFat.toFixed(2));
       const heightMeters = heightCm / 100;
-      const bmi = (weight / (heightMeters * heightMeters)).toFixed(2);
-      const leanBodyMass = (weight * (1 - (bodyFat / 100))).toFixed(2);
+      const bmi = parseFloat((weight / (heightMeters * heightMeters)).toFixed(2));
+      const leanBodyMass = parseFloat((weight * (1 - (bodyFat / 100))).toFixed(2));
+
+      function getBodyFatStatus(bf) {
+        if (gender === 'male') {
+          if (bf < 6) return 'Dangerously low';
+          if (bf < 14) return 'Athletic';
+          if (bf < 18) return 'Fit';
+          if (bf < 25) return 'Average';
+          return 'High';
+        } else {
+          if (bf < 14) return 'Dangerously low';
+          if (bf < 21) return 'Athletic';
+          if (bf < 25) return 'Fit';
+          if (bf < 32) return 'Average';
+          return 'High';
+        }
+      }
+
+      function getBmiStatus(bmi) {
+        if (bmi < 18.5) return 'Underweight';
+        if (bmi < 25) return 'Normal';
+        if (bmi < 30) return 'Overweight';
+        return 'Obese';
+      }
+
+      const maxLean = 120; // assumed max for ring fill scaling
+      const circumference = 2 * Math.PI * 90;
 
       document.getElementById('result').innerHTML = `
-        <div class="result-card">
-          <h2>Your Health Stats 🚀</h2>
-
-          <div class="metric">
-            <strong>Body Fat:</strong> ${bodyFat}%
-            <div class="bar-container">
-              <div class="bar" style="width: ${bodyFat > 40 ? 100 : bodyFat * 2.5}%; background-color: ${bodyFat < 18 ? '#2196f3' : bodyFat < 25 ? '#4caf50' : '#f44336'};"></div>
-            </div>
+        <div class="result-container">
+          <div class="saturn-ring ring-1">
+            <svg width="200" height="200">
+              <circle cx="100" cy="100" r="90" stroke="#e0f7fa" stroke-width="15" fill="none"/>
+              <circle id="bfRing" cx="100" cy="100" r="90" stroke="#4dd0e1" stroke-width="15" fill="none"
+                stroke-linecap="round"
+                stroke-dasharray="${circumference}"
+                stroke-dashoffset="${circumference}"
+              />
+            </svg>
+            <div class="ring-value">${bodyFat}%</div>
+            <div class="ring-label">Body Fat</div>
+            <div class="ring-description">${getBodyFatStatus(bodyFat)}</div>
           </div>
 
-          <div class="metric">
-            <strong>BMI:</strong> ${bmi}
-            <div class="bar-container">
-              <div class="bar" style="width: ${bmi > 40 ? 100 : bmi * 2.5}%; background-color: ${bmi < 18.5 ? '#2196f3' : bmi < 25 ? '#4caf50' : '#ff9800'};"></div>
-            </div>
+          <div class="saturn-ring ring-2">
+            <svg width="200" height="200">
+              <circle cx="100" cy="100" r="90" stroke="#f1f8e9" stroke-width="15" fill="none"/>
+              <circle id="bmiRing" cx="100" cy="100" r="90" stroke="#8bc34a" stroke-width="15" fill="none"
+                stroke-linecap="round"
+                stroke-dasharray="${circumference}"
+                stroke-dashoffset="${circumference}"
+              />
+            </svg>
+            <div class="ring-value">${bmi}</div>
+            <div class="ring-label">BMI</div>
+            <div class="ring-description">${getBmiStatus(bmi)}</div>
           </div>
 
-          <div class="metric">
-            <strong>Lean Body Mass:</strong> ${leanBodyMass} kg
-            <div class="bar-container">
-              <div class="bar" style="width: ${Math.min(leanBodyMass, 100)}%; background-color: #8bc34a;"></div>
-            </div>
+          <div class="saturn-ring ring-3">
+            <svg width="200" height="200">
+              <circle cx="100" cy="100" r="90" stroke="#fff3e0" stroke-width="15" fill="none"/>
+              <circle id="lmRing" cx="100" cy="100" r="90" stroke="#ffb74d" stroke-width="15" fill="none"
+                stroke-linecap="round"
+                stroke-dasharray="${circumference}"
+                stroke-dashoffset="${circumference}"
+              />
+            </svg>
+            <div class="ring-value">${leanBodyMass}kg</div>
+            <div class="ring-label">Lean Mass</div>
+            <div class="ring-description">Healthy range</div>
           </div>
         </div>
       `;
+
+      // Animate all three rings
+      const animateRing = (id, percent) => {
+        const ring = document.getElementById(id);
+        const offset = circumference - (Math.min(percent, 100) / 100) * circumference;
+        setTimeout(() => {
+          ring.style.strokeDashoffset = offset;
+        }, 100);
+      };
+
+      animateRing("bfRing", bodyFat);
+      animateRing("bmiRing", Math.min((bmi / 40) * 100, 100)); // scaled BMI
+      animateRing("lmRing", Math.min((leanBodyMass / maxLean) * 100, 100)); // scaled lean mass
     });
   </script>
 </body>
