--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 	
 	<script>
 	async function getData() {
-	    const url = "http://127.0.0.1:5000/todos/1"; 
+	    const url = "https://backend-1-6j4p.onrender.com/todos/1"; 
 	    try {
 	        const response = await fetch(url);
 	        if (!response.ok) {
@@ -402,7 +402,7 @@
 	}
 
 	async function getQuote() {
-	    const url = "http://127.0.0.1:5000/inspire"; 
+	    const url = "https://backend-1-6j4p.onrender.com/inspire"; 
 	    try {
 	        const response = await fetch(url);
 	        if (!response.ok) {
