--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 		
         <div class="feature-card">
           <h3>📱 Mobile Ready</h3>
-          <p>Access your fitness data anytime, anywhere from any device.</p>
+          <p>Coming Soon...</p>
         </div>
       </div>
     </div>
