--- a/index.html
+++ b/index.html
@@ -341,7 +341,9 @@
       <img src="https://i.pinimg.com/474x/0b/44/1c/0b441c810039cd890e0306c72f810a00.jpg" alt="HIIT Workout">
     </a>
     
-      <img src="https://media.tenor.com/IGi1JdHwtJsAAAAM/pumped-workout.gif" alt="Female Workout">
+      <a href="https://www.youtube.com/watch?v=0DfmKAHtR2M&t=15s&ab_channel=Archives" target="_blank">
+      <img src=" https://miro.medium.com/v2/resize:fit:1400/1*ck9xIzYXIbJG30HPmU8Bfg.png" alt="HIIT Workout">
+    </a>
     
   </div>
 </div>
